--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Обновить страницу": "Reload the page",
   "Вызвать ошибку": "Throw Error",
   "Главная": "Main",
-  "О нас": "About us"
+  "О нас": "About us",
+  "Войти": "Login"
 }
