--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Обновить страницу": "Обновить страницу",
   "Вызвать ошибку": "Вызвать ошибку",
   "Главная": "Главная",
-  "О нас": "О нас"
+  "О нас": "О нас",
+  "Войти": "Войти"
 }
