--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,7 @@
   "Вызвать ошибку": "Вызвать ошибку",
   "Главная": "Главная",
   "О нас": "О нас",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
