add login modal feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,6 +9,9 @@
   "Главная": "Main",
   "О нас": "About us",
   "Войти": "Login",
+  "Выйти": "Logout",
   "Введите username": "Enter username",
-  "Введите пароль": "Enter pasword"
+  "Введите пароль": "Enter pasword",
+  "Форма авторизации": "Authorization Form",
+  "Вы ввели неверный пароль": "Incorrect password"
 }
