--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,6 +9,9 @@
   "Главная": "Главная",
   "О нас": "О нас",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный пароль": "Вы ввели неверный пароль"
 }
