--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
   "Введите username": "Enter username",
   "Введите пароль": "Enter pasword",
   "Форма авторизации": "Authorization Form",
-  "Вы ввели неверный пароль": "Incorrect password"
+  "Вы ввели неверный пароль": "Incorrect password",
+  "Профиль": "Profile"
 }
