--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,6 @@
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
-  "Вы ввели неверный пароль": "Вы ввели неверный пароль"
+  "Вы ввели неверный пароль": "Вы ввели неверный пароль",
+  "Профиль": "Профиль"
 }
