--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,7 @@
 {
   "Редактировать": "Edit",
   "Ваше имя": "Your firstname",
-  "Ваша фамилия": "Your lastname"
+  "Ваша фамилия": "Your lastname",
+  "Произошла ошибка при загрузке профиля": "Error happened while lading the page",
+  "Попробуйте обновить страницу": "Try to reload the page"
 }
