--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,5 +1,7 @@
 {
   "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия"
+  "Ваша фамилия": "Ваша фамилия",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля"
 }
