add profile header

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,7 @@
 {
   "Редактировать": "Edit",
+  "Сохранить": "Save",
+  "Отменить": "Cancel",
   "Ваше имя": "Your firstname",
   "Ваша фамилия": "Your lastname",
   "Произошла ошибка при загрузке профиля": "Error happened while lading the page",
