--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -4,6 +4,11 @@
   "Сохранить": "Сохранить",
   "Ваше имя": "Ваше имя",
   "Ваша фамилия": "Ваша фамилия",
+  "Ваш возраст": "Ваш возраст",
+  "Город": "Город",
+  "Выберите валюту": "Выберите валюту",
+  "Введите имя пользователя": "Введите имя пользователя",
+  "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
   "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля"
 }
