update profileCard, add Country entity

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -7,6 +7,7 @@
   "Ваш возраст": "Your age",
   "Город": "City",
   "Выберите валюту": "Select currency",
+  "Выберите страну": "Выберите страну",
   "Введите имя пользователя": "Enter username",
   "Введите ссылку на аватар": "Enter Avatar Link",
   "Произошла ошибка при загрузке профиля": "Error happened while lading the page",
