--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -7,6 +7,7 @@
   "Ваш возраст": "Ваш возраст",
   "Город": "Город",
   "Выберите валюту": "Выберите валюту",
+  "Выберите страну": "Выберите страну",
   "Введите имя пользователя": "Введите имя пользователя",
   "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
