--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -11,5 +11,10 @@
   "Введите имя пользователя": "Введите имя пользователя",
   "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
-  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля"
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Некорректный регион": "Некорректный регион",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст"
 }
