add articles and articleDetails pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,7 @@
   "Вызвать ошибку": "Throw Error",
   "Главная": "Main",
   "О нас": "About us",
+  "Статьи": "Articles",
   "Войти": "Login",
   "Выйти": "Logout",
   "Введите username": "Enter username",
