--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,7 @@
   "Вызвать ошибку": "Вызвать ошибку",
   "Главная": "Главная",
   "О нас": "О нас",
+  "Статьи": "Статьи",
   "Войти": "Войти",
   "Выйти": "Выйти",
   "Введите username": "Введите username",
