--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -1,4 +1,6 @@
 {
   "Страница статей": "Articles page",
-  "Страинца статьи": "Article page"
+  "Страинца статьи": "Article page",
+  "Статья не найдена": "Article not found",
+  "Произошла ошибка при закгрузке статьи": "Error happened while article was loading..."
 }
