add comments to article Details page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,7 @@
   "Введите пароль": "Enter pasword",
   "Форма авторизации": "Authorization Form",
   "Вы ввели неверный пароль": "Incorrect password",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "Комментарии": "Commentts",
+  "Комментарии отсутствуют": "No comments yet"
 }
