--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,7 @@
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
   "Вы ввели неверный пароль": "Вы ввели неверный пароль",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Комментарии": "Комментарии",
+  "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
