add article list, article list item, skeletons and stories

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,7 @@
   "Вы ввели неверный пароль": "Incorrect password",
   "Профиль": "Profile",
   "Комментарии": "Commentts",
-  "Комментарии отсутствуют": "No comments yet"
+  "Комментарии отсутствуют": "No comments yet",
+  "Читать далее...": "Read more...",
+  "Назад к списку": "Back to list"
 }
