--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,7 @@
   "Вы ввели неверный пароль": "Вы ввели неверный пароль",
   "Профиль": "Профиль",
   "Комментарии": "Комментарии",
-  "Комментарии отсутствуют": "Комментарии отсутствуют"
+  "Комментарии отсутствуют": "Комментарии отсутствуют",
+  "Читать далее...": "Читать далее...",
+  "Назад к списку": "Назад к списку"
 }
