add article list sort and search

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,13 @@
   "Комментарии": "Commentts",
   "Комментарии отсутствуют": "No comments yet",
   "Читать далее...": "Read more...",
-  "Назад к списку": "Back to list"
+  "Назад к списку": "Back to list",
+  "Сортировать по": "Sort by",
+  "по": "by",
+  "Поиск": "Search",
+  "Заголовку": "Title",
+  "Дате создания": "Created At",
+  "Просмотрам": "Views",
+  "возростанию": "ascending",
+  "убыванию": "descending"
 }
