--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,5 +19,13 @@
   "Комментарии": "Комментарии",
   "Комментарии отсутствуют": "Комментарии отсутствуют",
   "Читать далее...": "Читать далее...",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Сортировать по": "Сортировать по",
+  "по": "по",
+  "Поиск": "Поиск",
+  "Заголовку": "Заголовку",
+  "Дате создания": "Дате создания",
+  "Просмотрам": "Просмотрам",
+  "возростанию": "возростанию",
+  "убыванию": "убыванию"
 }
